tests/error/self_errors/not_method.py
from guppylang.decorator import guppy


@guppy
def foo(self) -> None:
    pass


@guppy
def main() -> None:
    foo(42)


main.compile()