tests/error/self_errors/not_method.err
Error: Missing type annotation (at $FILE:5:8)
  | 
3 | 
4 | @guppy
5 | def foo(self) -> None:
  |         ^^^^ Argument requires a type annotation

Guppy compilation failed due to 1 previous error
